# Paper-Board

./: .gitignore  .python-version  README.md  pyproject.toml  setup.cfg  setup.py
src/paper_board/: board.py  command_line.py  config.py  data.py  data_puller.py  render_engine.py
src/paper_board/font/: loader.py
src/paper_board/gsheet/: __init__.py  gsheet.py
