[metadata]
name = paper-board
version = 0.0.1
description = E-Paper board display library
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = AMing
author_email = cyberming@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT
project_urls = 
    Source = https://github.com/aming/paper-board
    Tracker = https://github.com/aming/paper-bould/issues

[options]
zip_safe = False
package_dir =
    =src
packages = find_namespace:
platforms = any
include_package_data = True
install_requires =
    pillow
    pyowm
    yfinance
    google-api-python-client
    google-auth-httplib2
    google-auth-oauthlib
python_requires = >=3.7
setup_requires =
    setuptools_scm

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.entry_points]
console_scripts =
    paper-board = paper_board.command_line:main
    pull-data = paper_board.data_puller:main
    render-board = paper_board.data_puller:render

[options.extras_require]
spi =
    spidev
    rpi.gpio
test =
    pytest >= 6.2.2
    pycodestyle
    pytest-cov
all =
    %(test)s
